# coursera_crypto

week1/: main.go
week2/aes_decryption/: Cargo.toml
week2/aes_decryption/src/: main.rs
week3/hash-chain/: Cargo.toml
week3/hash-chain/src/: main.rs
week4/padding-oracle/: Cargo.toml
week4/padding-oracle/src/: main.rs
