[package]
name = "padding-oracle"
version = "0.1.0"
authors = ["Sirius <sirius@x250>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
actix-http = "3.0.0-beta.4"
awc = "3.0.0-beta.3"
env_logger = "0.8"
hex = "0.4"
futures = "0.3"
